Project Name Change. NELS: Never Ending Learning of Sound. Crawler Model Added.

--- a/NEAL/neal_main/templates/neal_main/about.html
+++ b/NEAL/neal_main/templates/neal_main/about.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'neal_main/css.css' %}" />
 
-<title>NEAL: Never Ending Audio Learning
+<title>NELS: Never Ending Learning of Sound
 </title>
 
 </head>
@@ -12,7 +12,7 @@
 <div id = "title">
 	<h1 class="logo">
 		<a href="" target = "_parent">
-		NEAL: Never Ending Audio Learner
+		NELS: Never Ending Learning of Sound
 		</a>
 	</h1>
 
@@ -150,7 +150,7 @@
 
     Humans identify sounds, able to classify them and draw relevancies. But how does a computer knows what a dog's bark sounds like? How does it knows that the incoming sound sounds like a bird? Can a computer learn all these just by browsing and classifying sounds on the Internet? NEAL believes it's possible!
 
-    NEAL (Never Ending Audio Learner) is a computer program that runs 24x7 days to automatically extract aural knowledge from Internet data. It runs through the input audio files over web and tries to identify which sounds occur and when in the audio. It is an effort to build the world’s largest aural knowledge base with minimum human labeling effort – one that would be useful in several researches. 
+    NELS (Never Ending Learning of Sound) is a computer program that runs 24x7 days to automatically extract aural knowledge from Internet data. It runs through the input audio files over web and tries to identify which sounds occur and when in the audio. It is an effort to build the world’s largest aural knowledge base with minimum human labeling effort – one that would be useful in several researches. 
 
 	</div>
 </html>
