--- a/NEAL/neal_main/templates/neal_main/downloads.html
+++ b/NEAL/neal_main/templates/neal_main/downloads.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'neal_main/css.css' %}" />
 
-<title>NESL: Never Ending Sound Learning
+<title>NELS: Never Ending Learning of Sound
 </title>
 
 </head>
@@ -12,7 +12,7 @@
 <div id = "title">
 	<h1 class="logo">
 		<a href="" target = "_parent">
-		NESL: Never Ending Sound Learner
+		NELS: Never Ending Learning of Sound
 		</a>
 	</h1>
 
