--- a/NEAL/neal_main/templates/neal_main/index.html
+++ b/NEAL/neal_main/templates/neal_main/index.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'neal_main/css.css' %}" />
 
-<title>NESL: Never Ending Sound Learning
+<title>NELS: Never Ending Learning of Sound
 </title>
 
 </head>
@@ -12,7 +12,7 @@
 <div id = "title">
 	<h1 class="logo">
 		<a href="" target = "_parent">
-		NESL: Never Ending Sound Learner
+		NELS: Never Ending Learning of Sound
 		</a>
 	</h1>
 
@@ -145,7 +145,7 @@
 	<br />
 	<h3>Vision</h3>
 	<br />
-	Never Ending Sound Learner (NESL)  is a computer program that works 24/7 learning information about sounds that it finds on the internet. It runs through the input audio files over web and tries to identify which sounds occur and when in the audio. It is an effort to build the world’s largest aural knowledge base with minimum human labeling effort – one that would be useful in several researches. 
+	Never Ending Learning of Sound (NELS)  is a computer program that works 24/7 learning information about sounds that it finds on the internet. It runs through the input audio files over web and tries to identify which sounds occur and when in the audio. It is an effort to build the world’s largest aural knowledge base with minimum human labeling effort – one that would be useful in several researches. 
 	<!--
 	{% load staticfiles %}
 	 <audio controls>
