--- a/NEAL/neal_main/templates/neal_main/segments.html
+++ b/NEAL/neal_main/templates/neal_main/segments.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'neal_main/css.css' %}" />
 
-<title>NEAL: Never Ending Audio Learning
+<title>NELS: Never Ending Learning of Sound
 </title>
 
 </head>
@@ -12,7 +12,7 @@
 <div id = "title">
 	<h1 class="logo">
 		<a href="" target = "_parent">
-		NEAL: Never Ending Audio Learner
+		NELS: Never Ending Learning of Sound
 		</a>
 	</h1>
 
