--- a/NEAL/neal_main/templates/neal_main/objects.html
+++ b/NEAL/neal_main/templates/neal_main/objects.html
@@ -132,6 +132,9 @@
 	<h2><a href = "{% url 'neal_main:segments' %}">Segments</a></h2>
 	</div>
 	<div class = "tab">
+	<h2><a href = "{% url 'neal_main:crawler' %}">Crawler</a></h2>
+	</div>
+	<div class = "tab">
 	<h2><a href = "{% url 'neal_main:downloads' %}">Downloads</a></h2>
 	</div>
 	<div class = "tab">
@@ -267,7 +270,7 @@
 	Please select a category from the left to view objects corresponding to them. 
 	<br />
 	<br />
-	Following are the sounds of most popular objects learnt by NESL: 
+	Following are the sounds of most popular objects learnt by NELS: 
 	<br />
 	<br />
 
