--- a/NEAL/neal_main/templates/neal_main/downloads.html
+++ b/NEAL/neal_main/templates/neal_main/downloads.html
@@ -134,6 +134,9 @@
 	<h2><a href = "{% url 'neal_main:segments' %}">Segments</a></h2>
 	</div>
 	<div class = "tab">
+	<h2><a href = "{% url 'neal_main:crawler' %}">Crawler</a></h2>
+	</div>	
+	<div class = "tab">
 	<h2><a href = "{% url 'neal_main:downloads' %}">Downloads</a></h2>
 	</div>
 	<div class = "tab">
