--- a/NEAL/neal_main/templates/neal_main/segments.html
+++ b/NEAL/neal_main/templates/neal_main/segments.html
@@ -134,6 +134,9 @@
 	<h2><a href = "{% url 'neal_main:segments' %}">Segments</a></h2>
 	</div>
 	<div class = "tab">
+	<h2><a href = "{% url 'neal_main:crawler' %}">Crawler</a></h2>
+	</div>
+	<div class = "tab">
 	<h2><a href = "{% url 'neal_main:downloads' %}">Downloads</a></h2>
 	</div>
 	<div class = "tab">
@@ -145,7 +148,7 @@
 	<br />
 	<h3>Vision</h3>
 	<br />
-	Never Ending Sound Learner (NESL)  is a computer program that works 24/7 learning information about sounds that it finds on the internet.  
+	Never Ending Learning of Sound (NELS)  is a computer program that works 24/7 learning information about sounds that it finds on the internet.  
 	<br />
 	
 	<br />
