--- a/NEAL/neal_main/templates/neal_main/segments.html
+++ b/NEAL/neal_main/templates/neal_main/segments.html
@@ -27,7 +27,7 @@
 <font color = "#cccccc">
     <h3 style="width: 40px;">
 
-        Statistics:
+         Statistics:
 
     </h3>
     <table style="font-size: 0.8em; margin-left: 20px; line-height: 1.4;">
@@ -35,12 +35,12 @@
             <tr>
                 <td style="text-align:right">
 
-                Concepts: 
+                Concepts: 7
 
                 </td>
 		<td style="text-align:right">
 
-                Audio Clips:   
+                Audio Clips: 850
 
                 </td>
                 
@@ -48,14 +48,14 @@
             <tr>
                 <td style="text-align:right">
 
-                Segmentations:    
+                Segmentations: 1, 93, 000
 
                 </td>
                 <td style="text-align:right">
 
-                Audio Relationships: 
+                &nbsp;&nbsp;&nbsp;Audio Relationships: to be mapped
 
-                </td>
+  </td>
             </tr>
         </tbody>
     </table>
